--- a/css/banner.css
+++ b/css/banner.css
@@ -9,6 +9,7 @@ html, body {
 #carousel {
     position: relative;
     box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.64);
+    top: 97px;
 }
 
 .carousel-inner {
