--- a/css/style.css
+++ b/css/style.css
@@ -112,7 +112,7 @@
 	margin: 5%;
 }
 .blocos{
-	background-color: #f1f1f1;
+	background-color: #fff;
 	border-radius: 20px;
 	width: 340px;
 	margin: 0 8px;
@@ -127,7 +127,6 @@
 }
 .blocos:hover{
 	border: 3px solid #cc8a60;
-	background-color: #fff;
 	padding: 22px 0;
 }
 .blocos img{
@@ -143,13 +142,21 @@
 }
 
 .botao-bloco {
-	width: 60%;
-	height: 12%;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	margin-left: 20%;
-	border-radius: 20px;
+    width: 60%;
+    height: 12%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 20%;
+    border-radius: 20px;
+    border-color: #e99f70;
+	background-color: #e79d6e;
+    
+}
+
+.botao-bloco:hover{
+	background-color: #e9a579;
+	border-color: #cc8a60;
 }
 
 .bloco-txt{
@@ -248,6 +255,11 @@
 	background-color: #f8e8d9;
 	z-index: 2;
 }
+
+.txt-form {
+    margin: 0 50px 0 0;
+}
+
 .form-form{
 	display: flex;
 	flex-wrap: wrap;
@@ -310,7 +322,16 @@
 	width: 25%;
 	padding: 25px;
 }
-
+.logo-rodape {
+    font-family: 'Great Vibes', cursive;
+    color: #cc8a60;
+    font-size: 2.3em;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: space-evenly;
+    height: 15rem;
+}
 .rodape-second {
 	padding: 25px;
 	width: 100%;
