--- a/css/style.css
+++ b/css/style.css
@@ -85,16 +85,17 @@
     display: flex;
     justify-content: space-between;
     background-color: #f8e8d9;
-    margin-top: 100px;
+	margin-top: 100px;
 }
 .servicos-tcc {
-	flex: 1 1;
-	margin: 70px 42px 0 42px;
+	margin: 3rem 1rem 1rem 2rem;
+    width: 50%;
 }
 .titulo-tcc {
 	padding: 10px;
 	display: flex;
 	justify-content: center;
+	font-family: 'Comic Neue', cursive;
 }
 .tcc {
 	line-height: 35px;
@@ -102,14 +103,16 @@
 .list-serv {
 	list-style: inside;
 	line-height: 2em;
+	font-family: 'Comic Neue', cursive;
 }
 .tcc-txt {
 	padding: 30px 0 0 0;
+	font-family: 'Comic Neue', cursive;
 }
 .espaco-blocos{
 	display: flex;
-	height: auto;
-	margin: 5%;
+	height: 22rem;
+	margin: 5% 2%;
 }
 .blocos{
 	background-color: #fff;
@@ -124,12 +127,49 @@
 	-webkit-transition: all 300ms linear 0s;
 	-o-transition: all 300ms linear 0s;
 	transition: all 300ms linear 0s;
+	font-family: 'Comic Neue', cursive;
+}
+.blocos h3 {
+    font-family: 'Great Vibes';
+    font-size: 2rem;
+    color: #cd8e66;
 }
 .blocos:hover{
 	border: 3px solid #cc8a60;
 	padding: 22px 0;
 }
 .blocos img{
+	padding: 5px 8px;
+	-webkit-transition: all 300ms linear 0s;
+	-o-transition: all 300ms linear 0s;
+	transition: all 300ms linear 0s;
+}
+
+.blocos2{
+	background-color: #fff;
+	border-radius: 20px;
+	width: 340px;
+	margin: 0 8px;
+	padding: 30px 0;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	text-align: center;
+	-webkit-transition: all 300ms linear 0s;
+	-o-transition: all 300ms linear 0s;
+	transition: all 300ms linear 0s;
+	font-family: 'Comic Neue', cursive;
+}
+.blocos2 h3 {
+    font-family: 'Great Vibes';
+    font-size: 2rem;
+    color: #cd8e66;
+}
+.blocos2:hover{
+	border: 3px solid #cc8a60;
+	padding: 22px 0;
+}
+.blocos2 img{
 	padding: 5px 8px;
 	-webkit-transition: all 300ms linear 0s;
 	-o-transition: all 300ms linear 0s;
@@ -168,23 +208,20 @@
 	margin: 0 auto;
 }
 
-.blocos h3 {
-    font-family: 'Great Vibes';
-    font-size: 2rem;
-    color: #cd8e66;
-}
+
 
 /*******************QUEM SOU*******************/
 #quem-sou {
 	display: flex;
 	height: 520px;
+	font-family: 'Comic Neue', cursive;
 }
 
 .quem-img {
 	flex: 1 1;
-	background-image: url(../imagens/xuxucaio2.jpg);
+	background-image: url(../imagens/xuxucaio2.jpeg);
 	background-attachment: fixed;
-	background-size: 50%;
+	background-size: 48%;
 	background-position: left ;
 }
 .quem-txt {
@@ -237,6 +274,7 @@
 	display: flex;
 	flex-wrap: wrap;
 	position: relative;
+	font-family: 'Comic Neue', cursive;
 
 }
 .formularios {
@@ -250,7 +288,7 @@
 }
 .conteudo-form {
 	width: 50%;
-	padding: 2em 0 2em 5em;
+	padding: 2em 2em 2em 5em;
 	box-sizing: border-box;
 	background-color: #f8e8d9;
 	z-index: 2;
@@ -314,12 +352,11 @@
 
 .rodape {
 	width: 100%;
-	height: 18em;
+	height: 5em;
 	display: flex;
-	box-sizing: border-box;
 }
 .rodape-first {
-	width: 25%;
+	width: 100%;
 	padding: 25px;
 }
 .logo-rodape {
@@ -327,20 +364,7 @@
     color: #cc8a60;
     font-size: 2.3em;
     display: flex;
-    flex-direction: column;
     text-align: center;
-    justify-content: space-evenly;
-    height: 15rem;
+    justify-content: center;
+    
 }
-.rodape-second {
-	padding: 25px;
-	width: 100%;
-	box-sizing: border-box;
-}
-
-.mapa-rodape{
-	width: 100%;
-	height: -webkit-fill-available;
-	box-sizing: border-box;
-}
-
