--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,19 @@
-*{
+* {
 	box-sizing: border-box;
 }
 
 ::marker {
-	color: #cc8a60;
+	color: #cc8a60
+}
+
+.fa-navicon:before, .fa-reorder:before, .fa-bars:before {
+	content: "\f0c9";
+	font-size: 25px;
 }
 
 
 /*******************LOADING*******************/
-.tela-loading{
+.tela-loading {
 	position: absolute;
 	width: 100vw;
 	height: 100vh;
@@ -18,7 +23,8 @@
 	background-color: #efcead;
 	z-index: 999;
 }
-.quadrado-loading{
+
+.quadrado-loading {
 	width: 100px;
 	height: 100px;
 	border: 5px #fff solid;
@@ -26,18 +32,22 @@
 	align-items: center;
 	justify-content: center;
 }
-.icone-loading{
+
+.icone-loading {
 	animation: girarIcone forwards infinite 1s ease-in-out;
 	width: 100%;
 }
-.icone-loading img{
+
+.icone-loading img {
 	width: 100px;
 }
-@keyframes girarIcone{
-	0%{
+
+@keyframes girarIcone {
+	0% {
 		transform: rotate(0deg);
 	}
-	100%{
+
+	100% {
 		transform: rotate(360deg);
 	}
 }
@@ -52,22 +62,25 @@
 	align-items: center;
 }
 
-.topo-scroll .topo__fixo{
+.topo-scroll .topo__fixo {
 	position: fixed;
 	top: 0;
 	width: 100%;
 	z-index: 99;
-	background-color: #efcead;
+	background-color: #fff;
+	height: 22%;
 }
 
-.logo-topo {
+/*.logo-topo {
 	font-family: 'Great Vibes', cursive;
 	color: #cc8a60;
 	font-size: 2.5em;
 	display: flex;
 	flex-direction: column;
 	text-align: center;
-}
+	}*/
+
+.logo-topo {}
 
 .menu-principal {
 	width: 35rem;
@@ -81,6 +94,13 @@
 	font-family: 'Great Vibes';
 }
 
+
+.menu-caio-wrapper {
+	display: none;
+}
+
+
+
 /*******************SERVIÇOS*******************/
 #servicos {
 	height: auto;
@@ -89,35 +109,44 @@
 	background-color: #f8e8d9;
 	margin-top: 100px;
 	scroll-margin-top: 150px;
+	position: relative;
+	top: 35px;
 }
+
 .servicos-tcc {
 	margin: 3rem 1rem 1rem 2rem;
 	width: 50%;
 }
+
 .titulo-tcc {
 	padding: 10px;
 	display: flex;
 	justify-content: center;
 	font-family: 'Comic Neue', cursive;
 }
+
 .tcc {
 	line-height: 35px;
 }
+
 .list-serv {
 	list-style: inside;
 	line-height: 2em;
 	font-family: 'Comic Neue', cursive;
 }
+
 .tcc-txt {
 	padding: 30px 0 0 0;
 	font-family: 'Comic Neue', cursive;
 }
-.espaco-blocos{
+
+.espaco-blocos {
 	display: flex;
 	height: 22rem;
 	margin: 5% 2%;
 }
-.blocos{
+
+.blocos {
 	background-color: #fff;
 	border-radius: 20px;
 	width: 340px;
@@ -132,23 +161,26 @@
 	transition: all 300ms linear 0s;
 	font-family: 'Comic Neue', cursive;
 }
+
 .blocos h3 {
 	font-family: 'Great Vibes';
 	font-size: 2rem;
 	color: #cd8e66;
 }
-.blocos:hover{
+
+.blocos:hover {
 	border: 3px solid #cc8a60;
 	padding: 22px 0;
 }
-.blocos img{
+
+.blocos img {
 	padding: 5px 8px;
 	-webkit-transition: all 300ms linear 0s;
 	-o-transition: all 300ms linear 0s;
 	transition: all 300ms linear 0s;
 }
 
-.blocos2{
+.blocos2 {
 	background-color: #fff;
 	border-radius: 20px;
 	width: 340px;
@@ -163,16 +195,19 @@
 	transition: all 300ms linear 0s;
 	font-family: 'Comic Neue', cursive;
 }
+
 .blocos2 h3 {
 	font-family: 'Great Vibes';
 	font-size: 2rem;
 	color: #cd8e66;
 }
-.blocos2:hover{
+
+.blocos2:hover {
 	border: 3px solid #cc8a60;
 	padding: 22px 0;
 }
-.blocos2 img{
+
+.blocos2 img {
 	padding: 5px 8px;
 	-webkit-transition: all 300ms linear 0s;
 	-o-transition: all 300ms linear 0s;
@@ -194,18 +229,28 @@
 	border-radius: 20px;
 	border-color: #e99f70;
 	background-color: #e79d6e;
+	cursor: pointer;
 
 }
-
-.botao-bloco:hover{
+.shake-vertical {
+	-webkit-animation: shake-vertical 3s cubic-bezier(0.455, 0.030, 0.515, 0.955) infinite both;
+	        animation: shake-vertical 3s cubic-bezier(0.455, 0.030, 0.515, 0.955) infinite both;
+}
+.botao-bloco a {
+    color: white;
+    display: flex;
+    align-items: center;
+}
+.botao-bloco:hover {
 	background-color: #e9a579;
 	border-color: #cc8a60;
 }
 
-.bloco-txt{
+.bloco-txt {
 	padding: 40px 0;
 }
-.icone-bloco{
+
+.icone-bloco {
 	width: 85px;
 	height: auto;
 	margin: 0 auto;
@@ -223,11 +268,12 @@
 
 .quem-img {
 	flex: 1 1;
-	background-image: url(../imagens/xuxucaio2.jpeg);
+	background-image: url(../imagens/xuxucaio.jpg);
 	background-attachment: fixed;
 	background-size: 48%;
-	background-position: left ;
+	background-position: left;
 }
+
 .quem-txt {
 	flex: 1 1;
 	padding: 25px;
@@ -237,23 +283,28 @@
 	border: 5px double #cc8a60;
 
 }
+
 .quem-txt h1 {
 	color: #cd8e66;
 	font-family: 'Great Vibes';
 }
+
 .quem-txt h2 {
 	color: #cd8e66;
 	font-family: 'Great Vibes';
 	font-size: 2rem;
 }
+
 .principais-demandas {
 	align-self: flex-start;
 	margin-top: 15px;
 }
+
 .list-sobre {
 	list-style: inside;
 	line-height: 1.5em;
 }
+
 .txt-sobre {
 	margin-bottom: 30px;
 	line-height: 1.5em;
@@ -287,6 +338,7 @@
 	scroll-margin-top: 150px;
 
 }
+
 .formularios {
 	width: 50%;
 	height: 100%;
@@ -296,6 +348,7 @@
 	z-index: 1;
 	left: 0;
 }
+
 .conteudo-form {
 	width: 50%;
 	padding: 2em 2em 2em 5em;
@@ -308,24 +361,24 @@
 	margin: 0 50px 0 0;
 }
 
-.form-form{
+.form-form {
 	display: flex;
 	flex-wrap: wrap;
 	margin: 0 auto;
 	padding: 30px 0;
 }
 
-.form-label{
+.form-label {
 	width: 50%;
 	margin-bottom: 15px;
 }
 
-.campo-form{
+.campo-form {
 	display: block;
 	margin-top: 5px;
 }
 
-.submit-form{
+.submit-form {
 	margin: 0 auto;
 }
 
@@ -333,10 +386,12 @@
 	width: 100%;
 	padding: 35px 0;
 }
+
 .list-form {
 	padding: 5px 0;
 	list-style: disc;
 }
+
 #button-form {
 	position: absolute;
 	top: 50%;
@@ -349,11 +404,11 @@
 	border: 2px dotted #cc8a60;
 }
 
-.animeformularios{
+.animeformularios {
 	left: 50%;
 }
 
-.imagemform{
+.imagemform {
 	border-style: none;
 	object-fit: contain;
 }
@@ -365,10 +420,12 @@
 	height: 6em;
 	display: flex;
 }
+
 .rodape-first {
 	width: 100%;
 	padding: 25px;
 }
+
 .logo-rodape {
 	font-family: 'Great Vibes', cursive;
 	color: #cc8a60;
@@ -378,7 +435,8 @@
 	justify-content: center;
 
 }
-.whatsapp-icon{
+
+.whatsapp-icon {
 	display: none;
 }
 
@@ -393,14 +451,107 @@
 	color: #bd5717;
 }
 
-@media (max-width: 1000px){
 
-	#formulario{
+/* --------- Responsivo ------------ */
+
+
+@media (max-width: 750px) {
+
+	.topo-menumobile {
+		width: 100%;
+		height: 100px;
+		position: absolute;
+		top: 0;
+		background-color: #EFEFEF;
+	}
+
+	.menu-caio-wrapper {
+		display: flex;
+		transform: translateX(calc(287px));
+		transition: all ease 250ms;
+		position: fixed;
+		top: 0;
+		right: 0;
+		z-index: 99999;
+	}
+
+	.botao-do-julio {
+		width: 50px;
+		height: 50px;
+		margin: 10px 0;
+		font-family: 'FontAwesome';
+	}
+
+	.lista-flutuante {
+		width: 290px;
+		height: 100vh;
+		background-color: #f5e0cc;
+		padding: 16px;
+		box-sizing: border-box;
+	}
+
+	.nave-caio {
+		padding: 20px 0;
+		line-height: 38px;
+	}
+
+	.lista-caio {
+		font-family: 'Comic Neue';
+		font-size: 1.3rem;
+		line-height: 4rem;
+	}
+
+	.numero-mobby {
+		padding: 13px 0;
+		line-height: 25px;
+	}
+
+	.item-mobby {
+		display: flex;
+		font-size: 15px;
+	}
+
+	.email-mobby {
+		padding: 25px 0 40px 0;
+		line-height: 25px;
+	}
+
+	.icone-mobby {
+		display: flex;
+		justify-content: space-evenly;
+		width: 100%;
+	}
+
+	.fa-mobby {
+		color: #000;
+	}
+
+	.indice-mobby {
+		color: #000;
+		font-weight: bold;
+	}
+
+	.ativo {
+		transform: translateX(0);
+	}
+
+	.logo-topo {
+		display: flex;
+		width: 100%;
+	}
+
+}
+
+@media only screen and (max-width: 1000px) {
+
+	#formulario {
 		display: none;
 	}
 
-	#servicos{
+	#servicos {
 		display: block;
+		position: relative;
+		top: 35px;
 	}
 
 	.servicos-tcc {
@@ -589,10 +740,90 @@
 		padding: 0 5rem;
 	}
 
+	.menu-principal {
+		justify-content: space-around;
+	}
+
+
+
 }
 
-@media (max-width: 600px){
+@-webkit-keyframes shake-vertical {
+	0%,
+	100% {
+	  -webkit-transform: translateY(0);
+			  transform: translateY(0);
+	}
+	10%,
+	30%,
+	50%,
+	70% {
+	  -webkit-transform: translateY(-8px);
+			  transform: translateY(-8px);
+	}
+	20%,
+	40%,
+	60% {
+	  -webkit-transform: translateY(8px);
+			  transform: translateY(8px);
+	}
+	80% {
+	  -webkit-transform: translateY(6.4px);
+			  transform: translateY(6.4px);
+	}
+	90% {
+	  -webkit-transform: translateY(-6.4px);
+			  transform: translateY(-6.4px);
+	}
+  }
+  @keyframes shake-vertical {
+	0%,
+	100% {
+	  -webkit-transform: translateY(0);
+			  transform: translateY(0);
+	}
+	10%,
+	30%,
+	50%,
+	70% {
+	  -webkit-transform: translateY(-8px);
+			  transform: translateY(-8px);
+	}
+	20%,
+	40%,
+	60% {
+	  -webkit-transform: translateY(8px);
+			  transform: translateY(8px);
+	}
+	80% {
+	  -webkit-transform: translateY(6.4px);
+			  transform: translateY(6.4px);
+	}
+	90% {
+	  -webkit-transform: translateY(-6.4px);
+			  transform: translateY(-6.4px);
+	}
+  }
+  
 
+@media only screen and (max-width: 750px) {
+
+	.txt-sobre {
+		margin-bottom: 15px;
+		line-height: 1.5em;
+	}
+
+	.menu-principal {
+		display: none;
+	}
+
+	#menu, .sub-menu {
+		display: block;
+	}
+
+	.botao-bloco {
+		font-size: 10px;
+	}
 
 
 }
